// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/GaugeCard basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "4rem",
          "width": "232px",
        }
      }
    >
      <div
        className="iot--card iot--gauge-card iot--card--wrapper"
        data-testid="Card"
        id="GaugeCard"
        role="presentation"
        style={
          Object {
            "--card-default-height": "144px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Health"
          >
            <div
              className="iot--card--title--text"
            >
              Health
            </div>
            <div
              className="bx--tooltip__label"
              id="card-tooltip-trigger-GaugeCard"
            >
              
              <div
                aria-describedby={null}
                className="bx--tooltip__trigger"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="button"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  description={null}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                  />
                  <path
                    d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "96px",
            }
          }
        >
          <div
            className="iot--gauge-container"
            style={
              Object {
                "paddingBottom": 0,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 0,
              }
            }
          >
            <svg
              aria-labelledby="gauge-label"
              className="iot--gauge"
              percent="0"
              style={
                Object {
                  "--gauge-bg": "#e0e0e0",
                  "--gauge-colors": "green",
                  "--gauge-max-value": 100,
                  "--gauge-size": "80px",
                  "--gauge-trend-color": "",
                  "--gauge-value": 81,
                  "--stroke-dash": 183.21768355735674,
                  "--stroke-dash-array": 226.1946710584651,
                }
              }
            >
              <circle
                className="iot--gauge-bg"
                cx={40}
                cy={40}
                r={36}
              />
              <circle
                className="iot--gauge-fg"
                cx={40}
                cy={40}
                r={36}
              />
              <text
                className="iot--gauge-value iot--gauge-value__centered iot--gauge-value-lg"
                id="gauge-label"
                textAnchor="middle"
                x={40}
                y="33"
              >
                <tspan>
                  81
                </tspan>
                <tspan>
                  %
                </tspan>
              </text>
            </svg>
            <div
              className="iot--gauge-trend iot--gauge-trend__up"
            >
              <p
                style={
                  Object {
                    "--gauge-trend-color": "",
                  }
                }
              >
                12%
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/GaugeCard with data state no-data 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "4rem",
          "width": "252px",
        }
      }
    >
      <div
        className="iot--card iot--gauge-card iot--card--wrapper"
        data-testid="Card"
        id="GaugeCard"
        role="presentation"
        style={
          Object {
            "--card-default-height": "144px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Health"
          >
            <div
              className="iot--card--title--text"
            >
              Health
            </div>
            <div
              className="bx--tooltip__label"
              id="card-tooltip-trigger-GaugeCard"
            >
              
              <div
                aria-describedby={null}
                className="bx--tooltip__trigger"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="button"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  description={null}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                  />
                  <path
                    d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "96px",
            }
          }
        >
          <div
            className="iot--gauge-container"
            style={Object {}}
          >
            <div
              className="iot--data-state-container"
              style={
                Object {
                  "--container-padding": "16px",
                }
              }
            >
              <p
                className="iot--data-state-dashes"
              >
                --
              </p>
              <div
                className="iot--data-state-grid"
              >
                <div
                  aria-describedby={null}
                  aria-labelledby="iot--data-state-grid__icon-GaugeCard"
                  className="bx--tooltip__label"
                  id="iot--data-state-grid__icon-GaugeCard"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    aria-hidden={true}
                    className="iot--data-state-default-warning-icon"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12,1C5.9,1,1,5.9,1,12s4.9,11,11,11s11-4.9,11-11C23,5.9,18.1,1,12,1z M11.1,6h1.8v8h-1.8V6z M12,19.2	c-0.7,0-1.2-0.6-1.2-1.2s0.6-1.2,1.2-1.2s1.2,0.6,1.2,1.2S12.7,19.2,12,19.2z"
                    />
                    <path
                      d="M13.2,18c0,0.7-0.6,1.2-1.2,1.2s-1.2-0.6-1.2-1.2s0.6-1.2,1.2-1.2S13.2,17.3,13.2,18z M12.9,6	h-1.8v8h1.8V6z"
                      data-icon-path="inner-path"
                      fill="none"
                      opacity="0"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "height": "150vh",
          }
        }
      />
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
